2006-06-29  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* Extras/Makefile.am:
	* Extras/Extras.mds:
	* Makefile.am:
	* configure.in: Add AspNetAddIn to the build.
	* AUTHORS: Add my name.

2006-06-26  Alp Toker <alp@atoker.com>

	* configure.in: Remove obsolete vte-sharp-2.0 check.

2006-06-24  John Luke <john.luke@gmail.com>

	* Unused/AssemblyAnalyzer:
	* Unused/ICSharpCode.SharpAssembly: remove
	
2006-06-07 Scott Ellington  <scott.ellington@gmail.com>
	
	* Makefile.am: Autotools must build before CSharpBinding

2006-06-07 Scott Ellington  <scott.ellington@gmail.com>

	* configure.in: Add new makefile to the build.

2006-06-05 Scott Ellington  <scott.ellington@gmail.com>

	* Extras/Makefile.am:
	* Makefile.am:
	* configure.in: Added MonoDevelop.Autotools to the build.
	* AUTHORS: Added my name.

2006-05-31 Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Added new makefile to the build.

2006-05-29 Lluis Sanchez Gual  <lluis@novell.com>

	* monodevelop.pc.in: Replace old SharpRefactory reference by
	  an NRefactory reference.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Added option for optionally enabling
	  the nemerle add-in. Patch by Alejandro Serrano.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Use gmcs instead of mcs. Added NRefactory
	  to the build.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Changed version to 0.11.

2006-04-27 Lluis Sanchez Gual  <lluis@novell.com>   

	* configure.in: Added russian translation and missing file.

2006-04-17  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* configure.in: Added zh_CN translation. Thanks to
	Yu Lindong <shinjidev@163.com>.

2006-04-03 Lluis Sanchez Gual  <lluis@novell.com>   

	* configure.in: Removed old glade3 stuff. Change version to 0.10.

2006-03-31 Lluis Sanchez Gual  <lluis@novell.com>   

	* Makefile.am: Added GtkCore and ChangeLog addins.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   
