@@ -1,3 +1,9 @@
+2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* monodevelop.in: Added yet another way of finding the
+	  mozilla location.
+	* monodevelop.pc.in: Fix MonoDevelop.Components location.
+
 2006-06-29  Michael Hutchinson <m.j.hutchinson@gmail.com>
 
 	* Extras/Makefile.am:
